17-Network-Policies/dnsutils.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dnsutils
  namespace: cfitech
  labels:
    app: dnsutils
spec:
  setHostnameAsFQDN: true
  containers:
  - image: ubuntu:22.04
    name: dnsutils
    command:
    - sleep
    - "infinity"
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
