17-Network-Policies/database.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sql
  namespace: cfitech
  labels:
    app: sql
spec:
  serviceName: sql
  replicas: 3
  selector:
    matchLabels:
      app: sql
  template:
    metadata:
      labels:
        app: sql
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: topology.kubernetes.io/zone
            labelSelector:
              matchLabels:
                app: web
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: topology.kubernetes.io/zone
            labelSelector:
              matchLabels:
                app: sql
      containers:
      - name: database
        image: mysql:latest
        ports:
        - containerPort: 3306
          name: sql
---
apiVersion: v1
kind: Service
metadata:
  name: sql
  namespace: cfitech
spec:
  type: LoadBalancer
  ports:
  - name: sql
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: sql
