17-Network-Policies/np.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: cfitech
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-default
  namespace: cfitech
spec:
  podSelector:
    matchLabels:
      app: web
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
      podSelector:
        matchLabels:
          app: dnsutils

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-default-8080
  namespace: cfitech
spec:
  podSelector:
    matchLabels:
      app: web-test
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
      podSelector:
        matchLabels:
          app: dnsutils
    ports:
    - protocol: TCP
      port: 80
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
      podSelector:
        matchLabels:
          app: dnsutils-test
    ports:
    - protocol: TCP
      port: 9113
